# coro-shot

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
src/: CMakeLists.txt  async_queue.h  config.h  generator.h  main.cc  queue.h  source.cc  task.h  thread_pool.h  trait.h
test/: CMakeLists.txt  generator_test.cc  queue_test.cc  task_test.cpp  trait_test.cc
